Chatbot response viewed on frontend

--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -3,7 +3,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Daily UI #013: Direct Messaging</title>
+    <title>Nick Leo Martin</title>
     
     
     <link rel="stylesheet"  type="text/css" href="{% static 'css/normalize.css' %}">
